--- a/app/src/js/app/components/Apps/catalogs/easyWeb/views/easyWebsView.html
+++ b/app/src/js/app/components/Apps/catalogs/easyWeb/views/easyWebsView.html
@@ -35,7 +35,7 @@
         <td>{{bill.developer}}</td>
         <td>
           <a ui-sref="app.easyWebEdit({id: bill.id})">
-            <img src="assets/images/icons/pencil-ico.svg">
+            <i class="ri-edit-line"></i>
           </a>
         </td>
       </tr>
