--- a/app/src/js/app/components/Apps/catalogs/hosting/views/hostingFormView.html
+++ b/app/src/js/app/components/Apps/catalogs/hosting/views/hostingFormView.html
@@ -485,7 +485,7 @@
               <td>{{product.state.name}}</td>
               <td>
                 <a ng-click='openModal(product,$index);' style='cursor: pointer;'>
-                  <img src="assets/images/icons/pencil-ico.svg">
+                  <i class="ri-edit-line"></i>
                 </a>
               </td>
               <td>
