--- a/app/src/js/app/components/banks/views/banksView.html
+++ b/app/src/js/app/components/banks/views/banksView.html
@@ -49,7 +49,7 @@
 
         <td>
           <a ui-sref="app.bankEdit({id: bank.id})">
-            <img src="assets/images/icons/pencil-ico.svg">
+            <i class="ri-edit-line"></i>
           </a>
         </td>
       </tr>
