--- a/app/src/js/app/components/budgets/views/budgetsView.html
+++ b/app/src/js/app/components/budgets/views/budgetsView.html
@@ -102,7 +102,7 @@
         <td><b>{{budget.status}}</b></td>
         <td>
           <a ui-sref="app.budgetEdit({id: budget.id})">
-            <img src="assets/images/icons/pencil-ico.svg">
+            <i class="ri-edit-line"></i>
           </a>
         </td>
       </tr>
