--- a/app/src/js/app/components/clients/views/clientsView.html
+++ b/app/src/js/app/components/clients/views/clientsView.html
@@ -31,7 +31,7 @@
                 <td>{{client.company}}</td>
                 <td>
                     <a ui-sref="app.clientEdit({id: client.id})">
-                        <img src="assets/images/icons/pencil-ico.svg">
+                        <i class="ri-edit-line"></i>
                     </a>
                 </td>
             </tr>
