--- a/app/src/js/app/components/evaluate/views/evaluateFormView.html
+++ b/app/src/js/app/components/evaluate/views/evaluateFormView.html
@@ -89,7 +89,7 @@
                 <div class="flex-item">{{eval.admin}}</div>
                 <div style="flex: 5%;width: 5%;" ng-if="userRole != 'developer'">
                     <a href="" ng-click="evalEdit(eval)">
-                        <img src="assets/images/icons/pencil-ico.svg">
+                        <i class="ri-edit-line"></i>
                     </a>
                 </div>
             </div>
