--- a/app/src/js/app/components/evaluate/views/evaluateView.html
+++ b/app/src/js/app/components/evaluate/views/evaluateView.html
@@ -34,7 +34,7 @@
                 <td>{{user.role}}</td>
                 <td>
                     <a ui-sref="app.evaluateForm({id: user.id})">
-                        <img src="assets/images/icons/pencil-ico.svg">
+                        <i class="ri-edit-line"></i>
                     </a>
                 </td>
             </tr>
