--- a/app/src/js/app/components/finances/views/financesView.html
+++ b/app/src/js/app/components/finances/views/financesView.html
@@ -78,7 +78,7 @@
         <td>{{finance.currency+" "+finance.amount}}</td>
         <td>
           <a ui-sref="app.financeEdit({id: finance.id})">
-            <img src="assets/images/icons/pencil-ico.svg">
+            <i class="ri-edit-line"></i>
           </a>
         </td>
       </tr>
@@ -121,7 +121,7 @@
         <td>{{finance.currency+" "+finance.amount}}</td>
         <td>
           <a ui-sref="app.financeEdit({id: finance.id})">
-            <img src="assets/images/icons/pencil-ico.svg">
+            <i class="ri-edit-line"></i>
           </a>
         </td>
       </tr>
@@ -167,7 +167,7 @@
         <td>{{finance.currency+" "+finance.amount}}</td>
         <td>
           <a ui-sref="app.financeEdit({id: finance.id})">
-            <img src="assets/images/icons/pencil-ico.svg">
+            <i class="ri-edit-line"></i>
           </a>
         </td>
       </tr>
@@ -213,7 +213,7 @@
         <td>{{finance.currency+" "+finance.amount}}</td>
         <td>
           <a ui-sref="app.financeEdit({id: finance.id})">
-            <img src="assets/images/icons/pencil-ico.svg">
+            <i class="ri-edit-line"></i>
           </a>
         </td>
       </tr>
@@ -262,7 +262,7 @@
         <td>{{finance.currency+" "+finance.amount}}</td>
         <td>
           <a ui-sref="app.financeEdit({id: finance.id})">
-            <img src="assets/images/icons/pencil-ico.svg">
+            <i class="ri-edit-line"></i>
           </a>
         </td>
       </tr>
