--- a/app/src/js/app/components/hours-cost/views/hoursCostView.html
+++ b/app/src/js/app/components/hours-cost/views/hoursCostView.html
@@ -36,7 +36,7 @@
         <td>{{cost.costClient | currency:(cost.currencyClient == 'USD' ? ' USD' : ' $')}}</td>
         <td>
           <a ui-sref="app.hourCostEdit({id: cost.id})">
-            <img src="assets/images/icons/pencil-ico.svg">
+            <i class="ri-edit-line"></i>
           </a>
         </td>
       </tr>
