--- a/app/src/js/app/components/reports/views/reportsView.html
+++ b/app/src/js/app/components/reports/views/reportsView.html
@@ -491,7 +491,7 @@
                 <td>$ {{trackAuto.trackCost}}</td>
                 <td>
                     <a href="" ng-click="editAutoTrack(trackAuto)">
-                        <img src="assets/images/icons/pencil-ico.svg">
+                        <i class="ri-edit-line"></i>
                     </a>
                 </td>
             </tr>
@@ -656,7 +656,7 @@
                 <td>$ {{trackTrello.trackCost}}</td>
                 <td>
                     <a href="" ng-click="editTrelloTrack(trackTrello)">
-                        <img src="assets/images/icons/pencil-ico.svg">
+                        <i class="ri-edit-line"></i>
                     </a>
                 </td>
             </tr>
