--- a/app/src/js/app/components/sales/views/salesView.html
+++ b/app/src/js/app/components/sales/views/salesView.html
@@ -116,7 +116,7 @@
 
         <td>
           <a ui-sref="app.saleEdit({id: sale.id})">
-            <img src="assets/images/icons/pencil-ico.svg">
+            <i class="ri-edit-line"></i>
           </a>
         </td>
       </tr>
