--- a/app/src/js/app/components/tasks/Jira/views/jiraTaskFormView.html
+++ b/app/src/js/app/components/tasks/Jira/views/jiraTaskFormView.html
@@ -120,7 +120,7 @@
                 <td>{{comment.text}}</td>
                 <td>
                   <a ng-click="editComments(comment.idComm,comment.text)">
-                    <img src="assets/images/icons/pencil-ico.svg">
+                    <i class="ri-edit-line"></i>
                   </a>
                 </td>
                 <td>
