--- a/app/src/js/app/components/tasks/tasks/views/taskEditFormView.html
+++ b/app/src/js/app/components/tasks/tasks/views/taskEditFormView.html
@@ -112,7 +112,7 @@
                 <td>{{comment.comment}}</td>
                 <td>
                   <a ng-click="editComments(index,comment)">
-                    <img src="assets/images/icons/pencil-ico.svg">
+                    <i class="ri-edit-line"></i>
                   </a>
                 </td>
                 <td>
