--- a/app/src/js/app/components/users/views/userFormView.html
+++ b/app/src/js/app/components/users/views/userFormView.html
@@ -213,7 +213,7 @@
                         <div class="flex-item">{{eval.admin}}</div>
                         <div style="flex: 5%;width: 5%;" ng-click="showEval(eval.evaluacion)">
                             <a>
-                                <img src="assets/images/icons/pencil-ico.svg">
+                                <i class="ri-edit-line"></i>
                             </a>
                         </div>
                     </div>
