--- a/app/src/js/app/components/weeklyHours/views/weeklyHoursView.html
+++ b/app/src/js/app/components/weeklyHours/views/weeklyHoursView.html
@@ -40,7 +40,7 @@
         <td>{{weeklyHour.currency}}</td>
         <td>
           <a ui-sref="app.weeklyHourEdit({id: weeklyHour.id})">
-            <img src="assets/images/icons/pencil-ico.svg">
+            <i class="ri-edit-line"></i>
           </a>
         </td>
       </tr>
