--- a/app/src/less/nav.less
+++ b/app/src/less/nav.less
@@ -144,7 +144,7 @@
   //bottom: 174px;
   padding-bottom: 30px;
   // top: @navbar-logo-height + 10px;
-  overflow: auto;
+  // overflow: auto;
   // border-right: 1px solid rgba(0,0,0,0.05);
   -ms-scrollbar-face-color: #5D6266;
   -ms-scrollbar-base-color: #5D6266;
@@ -621,15 +621,6 @@
   padding: 5px;
   font-size: 1rem;
   border-radius: 5px;
-}
-
-.imm-wa__cnt a i,
-.imm-table--fixed-cell button i {
-  background-color: @color-blue;
-  color: @color-white;
-  padding: 5px;
-  font-size: 1rem;
-  border-radius: 100%;
 }
 
 .imm-wa__cnt .imm-download-excel i {
