--- a/app/src/js/app/components/Apps/catalogs/products/views/productsView.html
+++ b/app/src/js/app/components/Apps/catalogs/products/views/productsView.html
@@ -38,7 +38,7 @@
 
         <td>
           <a ui-sref="app.productEdit({id: product.id})">
-            <img src="assets/images/icons/pencil-ico.svg">
+            <i class="ri-edit-line"></i>
           </a>
         </td>
       </tr>
