--- a/app/src/js/app/components/bills/views/billsView.html
+++ b/app/src/js/app/components/bills/views/billsView.html
@@ -45,7 +45,7 @@
 
         <td>
           <a ui-sref="app.billEdit({id: bill.id})">
-            <img src="assets/images/icons/pencil-ico.svg">
+            <i class="ri-edit-line"></i>
           </a>
         </td>
       </tr>
