--- a/app/src/js/app/components/tasks/taskManager/views/taskManagerView.html
+++ b/app/src/js/app/components/tasks/taskManager/views/taskManagerView.html
@@ -37,7 +37,7 @@
                 <td title="{{project.description}}">{{ project.tasknumber | truncateTail:true:45:'...' }}</td>
                 <td>
                     <a ui-sref="app.taskManagerEdit({id: project.id})">
-                        <img src="assets/images/icons/pencil-ico.svg">
+                        <i class="ri-edit-line"></i>
                     </a>
                 </td>
             </tr>
