--- a/app/src/js/app/components/tasks/taskTrello/views/taskTrelloFormView.html
+++ b/app/src/js/app/components/tasks/taskTrello/views/taskTrelloFormView.html
@@ -86,7 +86,7 @@
                         <td></td>
                         <td>
                             <a href="" ng-click="editTrello(tasks_trello)">
-                                <img src="assets/images/icons/pencil-ico.svg">
+                                <i class="ri-edit-line"></i>
                             </a>
                         </td>
                         <td></td>
@@ -95,8 +95,8 @@
                         <td>
                             <div ng-if="tasks_trello.isPlayable">
                                 <div ng-if="!tasks_trello.status.includes('Done') && !tasks_trello.includes('In-Review') && isClient=='false' ">
-                                    <a href ng-click="stopTrack()" ng-if="currentTrack.idTask == tasks_trello.id"><img class="img_stop" src="/assets/images/stop.png"></a>
-                                    <a href ng-click="startTrackTrello(tasks_trello)" ng-disabled="inprogress" ng-if="currentTrack.idTask != tasks_trello.id"><img class="img_play" src="/assets/images/play.png"></a>    
+                                    <a href ng-click="stopTrack()" ng-if="currentTrack.idTask == tasks_trello.id"><i class="ri-pause-line"></i></a>
+                                    <a href ng-click="startTrackTrello(tasks_trello)" ng-disabled="inprogress" ng-if="currentTrack.idTask != tasks_trello.id"><i class="ri-play-line"></i></a>    
                                 </div>
                             </div>
                         </td>
