--- a/app/src/js/app/components/tasks/tasks/views/tasksView.html
+++ b/app/src/js/app/components/tasks/tasks/views/tasksView.html
@@ -37,7 +37,7 @@
                 <td></td>
 
             </tr>
-            <tr ng-repeat="(index,task) in tasks" ng-class="{'active-task': currentTrack.idTask == task.id}" ng-style="task.status == 'Done' && {'background-color':'#3b0'}  || task.status == 'In-Review' && {'background-color':'#AE2E2E'} || task.status == 'In-Progress' && {'background-color':'#ccad16'}">
+            <tr ng-repeat="(index,task) in tasks" ng-class="{'active-task': currentTrack.idTask == task.id}" ng-style="task.status == 'Done' && {'background-color':'#a9e892'}  || task.status == 'In-Review' && {'background-color':'#f08b8b'} || task.status == 'In-Progress' && {'background-color':'#f2ecb8'}">
                 <td ng-if="userRole != 'admin'" title="{{task.projectName}}">{{task.projectName | truncateTail:true:30:'...'}}</td>
                 <td><a ng-if="userRole == 'admin'" style="color: #4a90e2; text-decoration: underline" ui-sref="app.projectEdit({id: task.idProject})" target="_blank">{{task.projectName | truncateTail:true:30:'...'}}</a></td>
                 <td title="{{task.name}}">{{task.name | truncateTail:true:30:'...'}}</td>
@@ -45,11 +45,11 @@
                 <td>{{task.duration}}</td>
                 <td>{{task.status}}</td>
                 <td>
-                     <a href="" ng-click="editTask(index,task)" ><img class="img_stop" src="/assets/images/icons/details-ico-blue.svg"></a>
+                     <a href="" ng-click="editTask(index,task)" ><i class="ri-search-line"></i></a>
                 </td>
                 <td>
                     <a ui-sref="app.taskForm({id: task.id})">
-                        <img src="assets/images/icons/pencil-ico.svg">
+                        <i class="ri-edit-line"></i>
                     </a>
                 </td>
                 <!-- <td ng-if="isAdmin=='false' && isClient=='false'">
@@ -58,8 +58,8 @@
                     </a>
                 </td> -->
                 <td ng-if="task.status != 'Done' && task.status != 'In-Review' && isClient=='false' ">
-                    <a href ng-click="stopTrack()" ng-if="currentTrack.idTask == task.id"><img class="img_stop" src="/assets/images/stop.png"></a>
-                    <a href ng-click="startTrack(task)" ng-if="currentTrack.idTask != task.id"><img class="img_play" src="/assets/images/play.png"></a>
+                    <a href ng-click="stopTrack()" ng-if="currentTrack.idTask == task.id"><i class="ri-pause-line"></i></a>
+                    <a href ng-click="startTrack(task)" ng-if="currentTrack.idTask != task.id"><i class="ri-play-line"></i></a>
                 </td>
                 <td ng-if="isClient=='true'"></td>
                 <td ng-if="task.status == 'Done' || task.status == 'In-Review' && isClient=='false'"></td>
