--- a/app/src/less/components/breadcrumbs.less
+++ b/app/src/less/components/breadcrumbs.less
@@ -6,7 +6,7 @@
   position: relative;
 
   &:before {
-    content:"";
+    content: "";
     display: block;
     position: absolute;
     left: 14px;
@@ -30,15 +30,15 @@
 a.imm-bc-item {
   color: @primary-color;
   /*border-bottom: 1px dotted currentColor;*/
-  font-weight: bold;
+  // font-weight: bold;
   letter-spacing: -1px;
 }
 
-.imm-bc-item + .imm-bc-item {
+.imm-bc-item+.imm-bc-item {
   margin-left: 40px;
 
   &:before {
-    content:"";
+    content: "";
     display: block;
     position: absolute;
     left: 14px;
